# Dora

backend/: Dockerfile  README.md  celery_app.py  celeryconfig.py  docker-compose.yml  main.py  model.py  pyproject.toml  requirements.txt  tasks.py  trial.py
frontend/: .eslintignore  eslint.config.mjs  middleware.ts  package-lock.json  package.json
frontend/app/: page.tsx
frontend/app/api/jobs/: route.ts
frontend/app/api/upload/: route.ts
frontend/app/app/: layout.tsx  page.tsx
frontend/app/auth/callback/: route.ts
frontend/app/components/: JobList.tsx  UploadForm.tsx  UploadReference.tsx  UploadVideo.tsx  VideoPlayer.tsx
frontend/app/lib/: api.ts  prisma.ts
frontend/app/lib/supabase/migrations/: 20240320000000_create_jobs_table.sql
frontend/app/login/: page.tsx
frontend/app/signup/: page.tsx
frontend/app/utils/: server.ts
frontend/components/: layout.tsx  user-menu.tsx
frontend/components/ui/: input.tsx
frontend/prisma/: schema.prisma
frontend/prisma/migrations/20250607021436_init/: migration.sql
frontend/prisma/migrations/20250615001229_add_url_columns/: migration.sql
