[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "celery[redis]>=5.5.2",
    "redis>=5.3.0",
    "opencv-python>=4.11.0.86",
    "ffmpeg-python>=0.2.0",
    "pydantic>=2.11.4",
    "python-multipart>=0.0.20",
    "face-recognition-models>=0.3.0",
    "face-recognition>=1.3.0",
]
